fix: Prevent document body from scrolling while modal is visible.
[#55]

* Add styles to prevent scrolling while modal is active.
* Create useScrollLock hook to apply the aforementioned styles.

This closes #55

--- a/packages/common/src/components/Modal/Modal.module.scss
+++ b/packages/common/src/components/Modal/Modal.module.scss
@@ -1,5 +1,7 @@
 .card {
   opacity: 1;
-  z-index: 1;
-  // display: inline-block;
+}
+
+.preventScrolling {
+  overflow: hidden;
 }
